// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`selectors/life should get credentialsSelector 1`] = `
Object {
  "clientId": "1234",
  "clientSecret": "5678",
}
`;

exports[`selectors/life should get life state 1`] = `
Object {
  "credentials": Object {
    "clientId": "1234",
    "clientSecret": "5678",
  },
  "status": true,
}
`;
